# coredump-debugger

./: .gitignore  demo.py  pyproject.toml  readme.md
src/dpdb/: __init__.py  __main__.py  core_dump.py  interface.py
