[project]
name = "coredump-debugger"
version = "0.0.4"
authors = [
  { name="starreeze", email="starreeze@foxmail.com" },
]
description = "Python core dump system for post-mortem debugging"
readme = "readme.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    "rich",
]

[project.optional-dependencies]
dev = [
    "term_background",
]

[project.scripts]
dpdb = "dpdb.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"